--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "msw": "^2.7.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
     "react-use": "^17.6.0"
