--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
       "react/jsx-no-bind": "off",
       "arrow-body-style": "off",
       "operator-linebreak": "off",
-      "no-console": "warn",
+      "no-console": "off",
       "object-curly-newline": "off",
       "no-underscore-dangle": "off",
       "jsx-a11y/label-has-associated-control": ["error", {
